<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/searchView"
            android:layout_gravity="end" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/listView"
            android:footerDividersEnabled="true"
            android:layout_weight="1"
            android:headerDividersEnabled="true" />

        <GridLayout
            android:id="@+id/navigationLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:rowCount="1"
            android:columnCount="5"

            android:layout_gravity="center"
            android:rowOrderPreserved="true"
            android:layout_weight="0">

            <Button style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_page"
                android:id="@+id/firstButton"
                android:layout_row="0"
                android:layout_column="0" />
            <Button style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prev_page"
                android:id="@+id/prevButton"
                android:layout_row="0"
                android:layout_column="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/page_number"
                android:id="@+id/nrOfResults"
                android:layout_row="0"
                android:layout_column="2"
                android:gravity="center_vertical|center_horizontal"
                android:layout_gravity="start|center|end"/>

            <Button style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_page"
                android:id="@+id/nextButton"
                android:layout_row="0"
                android:layout_column="3" />

            <Button style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_page"
                android:id="@+id/lastButton"
                android:layout_row="0"
                android:layout_column="4"
                />
        </GridLayout>

    </LinearLayout>


</RelativeLayout>
